[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KAMELpy"
version = "1.0.0"
description = "Python interface for KiLCA, KIM and QL-Balance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "f90nml"
]
authors = [
    { name = "Markus Markl", email = "markl@tugraz.at" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
[tool.setuptools]
packages = { find = { include = ["*"] } }

